<resources>
    <string name="app_name">Bull</string>
    <string name="errRealized">Enter Your Calculation</string>
    <string name="symbol_placeholder">&amp;&amp;</string>
    <string name="share_placeholder">--</string>
    <string name="cost_placeholder">--.--</string>
    <string name="recall">Recall</string>
    <string name="previous">Previous</string>
    <string name="update">update</string>
    <string name="calc">Calculate!</string>
    <string name="input_buy_price">ex. 12.32</string>
    <string name="sell_price">Sell Price</string>
    <string name="input_sell_price"> ex. 32.10</string>
    <string name="input_number_of_shares"> ex. 200</string>
    <string name="number_of_shares">Number of Shares (38)</string>
    <string name="input_stock_symbol">ex. ABC</string>
    <string name="stock_symbol">Stock Symbol</string>
    <string name="buy_price">Buy Price</string>
    <string name="trade_commission">Trade Commission </string>
    <string name="input_commission">ex. 9.99</string>
    <string name="sell_cost">--.--</string>
    <string name="sell_amount">Sell Amount</string>
    <string name="buy_cost">--.--</string>
    <string name="buy_amount">Buy Amount</string>
    <string name="realized_value">Realized Value</string>
    <string name="_0">$0</string>
    <string name="view">Bull Widget</string>
    <string name="comm_header_text">Comm: $</string>
    <string name="swipe_to_delete_and_tap_recall_to_fill_in_fields">Swipe to delete and tap Recall to fill in fields</string>
    <string name="widget_prompt">Make a calculation in the Bull App!</string>
    <string name="buy_header_text">Buy: $</string>
    <string name="sell_header_text">Sell: $</string>
    <string name="shares">Shares:</string>
    <string name="symbol">Symbol:</string>
</resources>
